2016-07-29  https://github.com/bb-Ricardo

	* check_ssl_cert: calculate expiration primary with date

2016-07-12  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed the parsing of the CN field

2016-06-25  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed OSCP header on old OpenSSL versions

2016-06-24  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: OCSP is now default

	* check_ssl_certe: Fixed OCSP host

2016-06-15  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Better curl error handling

2016-06-10  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Added an option to clear the cached result at SSLLabs

2016-06-01  juckerf (https://github.com/juckerf)

	* check_ssl_cert: Increase control over which SSL/TLS versions to use

2016-05-17  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: added more debugging info (-v is automatic if -d is spefied, system info and cert written to a file)

2016-04-27  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixes a bug in the OpenSSL error parsing

2016-04-05  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: In case of an s_client error does not output the full (ugly) error. The error is shown in verbose mode

2016-03-29  Sergei Shmanko

	* check_ssl_cert: Fix wildcard match regex, add additional unit tests

2016-03-21  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (exec_with_timeout): issues a critical status
	when using the 'timout' utility

2016-03-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed CN parsing on non-GNU systems

2016-03-19  Sergei https://github.com/sshmanko

	* check_ssl_cert: handle wildcard certificates

2016-03-10  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): Better handling of verification errors

2016-03-09  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (convert_ssl_lab_grade): accepts lowercase letters for SSL Labs grades
	* check_ssl_cert (check_attr): waits for SSL Labs results

2016-03-08  Matteo Corti  <matteo@corti.li>
