@@ -1,3 +1,7 @@
+2016-07-29  Matteo Corti  <matteo@corti.li>
+
+	* check_ssl_cert: fixed case insensitive comparison of CNs
+
 2016-07-29  https://github.com/bb-Ricardo
 
 	* check_ssl_cert: calculate expiration primary with date
